--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/net6.0/weather.dll",
+            "program": "${workspaceFolder}/src/bin/Debug/net6.0/weather.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
