--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,19 +7,7 @@
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
   - test
-  - security
 
-build-and-test:
-  stage: test
-  needs: []
-  image: mcr.microsoft.com/dotnet/sdk:6.0
-  script:
-    - dotnet restore
-    - dotnet build
-    - dotnet test
-
-sast:
-  stage: security
-  needs: []
 include:
-  - template: Security/SAST.gitlab-ci.yml
+  - template: Jobs/Dependency-Scanning.gitlab-ci.yml
+  - template: Jobs/SAST.gitlab-ci.yml
