--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,26 @@
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
+  - build
   - test
 
 include:
   - template: Jobs/Dependency-Scanning.gitlab-ci.yml
   - template: Jobs/SAST.gitlab-ci.yml
+
+build-and-test:
+  stage: build
+  needs: []
+  image: mcr.microsoft.com/dotnet/sdk:6.0
+  script:
+    - dotnet restore
+    - dotnet build
+    - dotnet test
+
+security-code-scan-sast:
+  dependencies:
+    - build-and-test
+
+gemnasium-dependency_scanning:
+  dependencies:
+    - build-and-test
