--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,9 @@ jobs:
       - name: Install Tools
         run: |
           dotnet tool install --global dotnet-sonarscanner
-          dotnet tool install --global coverlet.console
+          dotnet tool install --global dotnet-coverage
+
+        # dotnet tool install --global coverlet.console
 
       - name: Build and Analyze
         env:
@@ -29,5 +31,7 @@ jobs:
         run: |
           dotnet-sonarscanner begin /k:"JQNGDevOrg_weather" /o:"jqngdevorg" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.xml
           dotnet build
-          coverlet .\test\bin\Debug\net6.0\test.dll --target "dotnet" --targetargs "test --no-build" -f=opencover -o="coverage.xml"
+          dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml
           dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+
+        # //coverlet .\test\bin\Debug\net6.0\test.dll --target "dotnet" --targetargs "test --no-build" -f=opencover -o="coverage.xml"
