--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           dotnet-sonarscanner begin /k:"JQNGDevOrg_weather" /o:"jqngdevorg" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.xml
           dotnet build
-          dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml
+          dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml'
           dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
         # //coverlet .\test\bin\Debug\net6.0\test.dll --target "dotnet" --targetargs "test --no-build" -f=opencover -o="coverage.xml"
